[package]
name = "casper-engine-test-support"
version = "1.0.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Fraser Hutchison <fraser@casperlabs.io>"]
edition = "2018"
description = "Library to support testing of Wasm smart contracts for use on the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-engine-test-support"
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/casper-node/tree/master/execution_engine_testing/test_support"
license-file = "../../LICENSE"

[dependencies]
casper-contract = { path = "../../smart_contracts/contract", features = ["std"] }
casper-execution-engine = { path = "../../execution_engine", features = ["gens"] }
casper-types = { path = "../../types", features = ["std"] }
lmdb = "0.8.0"
log = "0.4.8"
num-rational = "0.4.0"
num-traits = "0.2.10"
once_cell = "1.5.2"
rand = "0.8.3"

[dev-dependencies]
anyhow = "*"
casper-node = { path = "../../node" }
hex="*"
jsonrpc-lite = "*"
reqwest = { version = "0.11.1", features = ["json"] }
serde_json = "*"
serde = "*"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
version-sync = "0.9"

[features]
use-as-wasm = []
test-support = ["casper-contract/test-support"]

